[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art res/GUI/ItemFrame.png" type="Texture" id=1]
[ext_resource path="res://Art res/Objects_and_Items/Sword.PNG" type="Texture" id=2]
[ext_resource path="res://Art res/Objects_and_Items/Pendant.PNG" type="Texture" id=3]
[ext_resource path="res://Art res/Objects_and_Items/Jewel.PNG" type="Texture" id=4]
[ext_resource path="res://Player/Hud.gd" type="Script" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Container" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Container"]
margin_right = 285.0
margin_bottom = 93.0
__meta__ = {
"_edit_group_": true
}

[node name="ItemFrame" type="Sprite" parent="Container/HBoxContainer"]
position = Vector2( 47, 47 )
scale = Vector2( 2.9375, 2.9375 )
texture = ExtResource( 1 )

[node name="Sword" type="Sprite" parent="Container/HBoxContainer/ItemFrame"]
position = Vector2( -0.265627, 0.351122 )
scale = Vector2( 0.0736719, 0.076452 )
texture = ExtResource( 2 )

[node name="ItemFrame2" type="Sprite" parent="Container/HBoxContainer"]
position = Vector2( 141, 47 )
scale = Vector2( 2.9375, 2.9375 )
texture = ExtResource( 1 )

[node name="Pendant" type="Sprite" parent="Container/HBoxContainer/ItemFrame2"]
position = Vector2( 0, -7.62939e-06 )
scale = Vector2( 0.07625, 0.07625 )
texture = ExtResource( 3 )

[node name="ItemFrame3" type="Sprite" parent="Container/HBoxContainer"]
position = Vector2( 235, 47 )
scale = Vector2( 2.9375, 2.9375 )
texture = ExtResource( 1 )

[node name="Jewel" type="Sprite" parent="Container/HBoxContainer/ItemFrame3"]
position = Vector2( -0.062499, -0.062499 )
scale = Vector2( 0.0753125, 0.0753125 )
texture = ExtResource( 4 )
